@@ -26,6 +26,7 @@ export(computeLibraryFactors)
 export(computeMedianFactors)
 export(computePooledFactors)
 export(computeSpikeFactors)
+export(correctGroupSummary)
 export(downsampleBatches)
 export(downsampleMatrix)
 export(fitLinearModel)
@@ -157,8 +158,11 @@ importFrom(methods,as)
 importFrom(methods,is)
 importFrom(stats,coef)
 importFrom(stats,lm)
+importFrom(stats,lm.fit)
+importFrom(stats,lm.wfit)
 importFrom(stats,mad)
 importFrom(stats,median)
+importFrom(stats,model.matrix)
 importFrom(stats,nls)
 importFrom(stats,nls.control)
 importFrom(stats,quantile)
